Mr Hyde was here …

--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -4,6 +4,7 @@ layout: default
 <head>
 <meta name="geo.placename" content="{{ page.landmark }}, {{ page.categories }}">
 <link rel="stylesheet" href="/css/blueimp-gallery.css">
+<meta property="og:description" name="description" content="Photos from {{ page.landmark }}">
 <link rel="image_src" href="http://domain.com/images/logo.gif" />
 </head>
 
