Mr Hyde was here …

--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -52,6 +52,8 @@ layout: default
 <br>
 {% include sharer.html %}
 </div>
+</div>
+<div class="container-post"> 
 
     <div class="next-article center">Read next</div>
 <div class="pageNavigation center">
