Mr Hyde was here …

--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -53,7 +53,9 @@ layout: default
 {% include sharer.html %}
 </div>
 <br>
+</div>
 
+<div class="container-fluid>
     <div class="next-article center">Read next</div>
 <div class="pageNavigation center">
   {% if page.previous.url %}
@@ -70,6 +72,7 @@ layout: default
     </a>
 
   {% endif %}
+</div>
 </div>
 </div>
 
