Mr Hyde was here …

--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -53,6 +53,7 @@ layout: default
 </div>
 <br>
 {% include sharer.html %}
+</div>
 
 
     <div class="next-article center">Read next</div>
@@ -71,7 +72,7 @@ layout: default
     </a>
   {% endif %}
 </div>
-
+</div>
 <script src="/js/blueimp-gallery.min.js"></script>
 </script>
 <script>
