Mr Hyde was here …

--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -56,7 +56,7 @@ layout: default
 </div>
 
 
-    <div class="next-article center">Read next</div>
+    <div class="container-fluid next-article center">Read next</div>
 <div class="pageNavigation center">
   {% if page.previous.url %}
     <a class="prev" href="{{page.previous.url}}">
