Mr Hyde was here …

--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -10,7 +10,7 @@ layout: default
 <div class="container-fluid postHeader" id="textover">
    
 <noscript><img src="{{ site.baseurl }}{{ image.path }}" /></noscript>
-<link rel="image_src" href="{{ site.baseurl }}{{ page.lead }}" />
+<link rel="image_src" href="{{ page.lead }}" />
         <img class="img-responsive lazyload blur-up" data-src="{{ page.lead }}"  alt="{{ page.title }}">
 </div>
 
