--- a/css/main.css
+++ b/css/main.css
@@ -176,6 +176,7 @@ h1, h2, h3, h4, h5, h6 a {
 }
 a {
     color: #141414;
+    font-weight: 400;
 }
 a:active, a:hover, a:visited {
     text-decoration:none;
