fixing bottom navigation div
attempt to fix bottom nav div by moving it outside of the main
blogposting div. putting sharer inside a div since its a ul

--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -54,8 +54,9 @@ layout: default
 {% endfor %} 
 </div>
 </div>
+</div>
 
-{% include sharer.html %}
+<div>{% include sharer.html %}</div>
 
     <div class="next-article center">Read next</div>
 
@@ -74,7 +75,7 @@ layout: default
   {% endif %}
 </div>
 
-</div>
+
 <script src="/js/blueimp-gallery.min.js"></script>
 </script>
 <script>
