--- a/css/main.css
+++ b/css/main.css
@@ -572,6 +572,6 @@ div>.pageNavigation>a.prev {
   transform: translate(-50%, -50%);	
 }
 .bottom {
-    position:absolute;
+    margin-top: 1em;
     bottom:0;
 }
