--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -23,7 +23,7 @@ layout: default
 </div>
 
 
-<div class="container-post">   
+<div class="container-post full-height">   
     <h2 itemprop="name headline" >{{ page.title }}</h2>
     {% include post-info.html %}
 
@@ -54,7 +54,6 @@ layout: default
 {% endfor %} 
 </div>
 </div>
-    <br>
 </div>
 
 <div class="bottom">
