--- a/css/main.css
+++ b/css/main.css
@@ -571,6 +571,9 @@ div>.pageNavigation>a.prev {
   left: 50%;  
   transform: translate(-50%, -50%);	
 }
+.full-height {
+    height: 100%;
+}
 .bottom {
     position: fixed;
     margin-top: 1em;
