--- a/_includes/map_large.html
+++ b/_includes/map_large.html
@@ -1,5 +1,5 @@
 <div class="google-maps">
-<iframe class="center-block" style="padding-bottom:1.5em; padding-top: 1.5em;" src="https://www.google.com/maps/embed/v1/place?q={{ page.landmark }},%{{ page.categories }}
+<iframe class="center-block" style="padding-bottom:1.5em; padding-top: 1.5em;" src="https://www.google.com/maps/embed/v1/place?q={{ page.landmark }}, {{ page.categories }}
       &zoom=10
       &key=AIzaSyBZFMSA0kCVLsSCcIIXfTRhcJwKrBHLQeI" width="600" height="450" frameborder="0">
   </iframe>
