--- a/_includes/signature.html
+++ b/_includes/signature.html
@@ -3,8 +3,7 @@
     <ul class="center list-inline vertical-align">
     <li><a href="mailto:hello@yearinabackpack.com">@yearinabackpack</a></li>
         <li><a href="http://www.facebook.com/yearinabackpack" class="normal-font">facebook</a></li>
-        <li><a href="http://www.twitter.com/yearinabackpack" class="normal-font">twitter</a></li>
         <li><a href="http://www.instagram.com/yearinabackpack" class="normal-font">instagram</a></li>
-    <li style="font-size:0.8em"><a href="http://www.jakubvelfl.com" class="center normal-font">&copy; Jakub Velfl</a></li>    
+    <li style="font-size:0.8em"><a href="http://www.jakubv.com" class="center normal-font">&copy; Jakub Velfl</a></li>
     </ul>
-      </footer>    
+      </footer>
