img-responsive full size fix
included extra css to make sure it displays correctly on bigger screens

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,15 @@
     position: relative;
 }
 
+.img-responsive {
+  width: 100%;
+  height: auto;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -20%);
+  position: relative;
+}
+
 .lazyload,
 .lazyloading {
     opacity: 0;
